# my-offers

./: .build.sh  .envrc.example  .gitignore  Dockerfile  Pipfile  README.md  app.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
contrib/: schema.sql
contrib/cassandra/: schema_for_tests.ddl  search_coverage.cql  statistics.cql
contrib/postgresql/: schema.sql
contrib/postgresql/migrations/: 0001-initial.sql  0002-search-log.sql  0003-duplicates.sql  0004-duplicate-notification.sql  0005-offers-resender.sql  0006-similar-offers.sql  0007-add-realty-offers-event-date.sql  0008-new_index_similar_offers.sql  0009-add-sync-to-reindex.sql  0010-offers-similars.sql  (+24 more)
src/my_offers/: __init__.py  cli.py
tests/: conftest.py  settings.py  test_base.py  utils.py
tests/codegen/: test_object_model.py
tests/entities/: test_agent.py
tests/helpers/: test_available_actions.py  test_emails.py  test_get_paid_by.py  test_get_status_tab.py  test_is_offer_for_similar.py  test_numbers.py  test_time.py  test_title.py  test_user_ids.py
tests/mappers/: test_date_time_time_zone_mapper.py
tests/queue/: test_announcement_contract_consumers.py  test_kafka_producers.py  test_offer_premoderation_consumers.py  test_process_announcements_consumer.py  test_process_announcements_queue.py  test_queues.py  test_save_agent_consumer.py  test_save_offer_offence_consumer.py  test_save_offer_relevance_warning.py  test_save_offer_unload_error_consumer.py
tests/services/: test_get_region_ids.py  test_qa.py
tests_api/: __init__.py  conftest.py  helper.py  swagger.yaml  test_public_v1_archive_offer.py  test_public_v1_delete_offer.py  test_public_v1_get_offers.py  test_public_v1_update_edit_date.py  test_public_v2_archive_offer.py  test_public_v2_delete_offer.py  test_public_v2_get_offers.py
tests_api/cian/: __init__.py  services.py
tests_api/settings/: base.py  dev.py  prod.py  stage.py
tests_functional/: conftest.py  pytest.ini  test_ping.py  test_process_announcement_callback.py  utils.py
tests_functional/data/: agents_hiearachy.sql  clear_offers.sql  offer_inactive.sql  offers.sql  offers_for_available_actions.sql  offers_for_pagination.sql  offers_for_sort.sql  offers_for_valuation.sql  offers_for_valuation_null_price.sql  offers_for_valuation_usd.sql  offers_offences.sql  offers_premoderations.sql  offers_same_building.sql  offers_similar.sql  offers_similar_tab_all.sql
tests_functional/queue/: test_delete_user_data_queue_consumer.py  test_duplicate_price_changed_notification_consumer.py  test_duplicate_price_changed_notification_producer.py  test_new_offer_duplicate_notification_consumer.py  test_process_announcement_callback.py  test_process_announcement_consumer.py  test_process_announcement_consumer_similar.py  test_save_agent_consumer.py  test_save_announcement_contract_consumer.py  test_save_offer_relevance_warning_consumer.py  test_update_offer_duplicates_consumer.py
(+932 files in other folders)
