[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "my-offers"
version = "0.1.0"
authors = ["Cian Team <python@cian.ru>"]
description = "МКС: мои объявления для агента"
readme = "README.md"

[tool.poetry.scripts]
my-offers = "my_offers.cli:cli"

[[tool.poetry.source]]
name = "cian"
url = "https://nexus.cian.tech/repository/cian/simple/"
default = true

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
asyncpgsa = "^0.26"
cassandra-driver = "^3.19"
cian-cache = "^1.1"
cian-cassandra = "^0.10"
cian-core = {version = "^1.25", extras = ["rabbitmq_consumer_cli", "graphite", "postgres", "cache", "cassandra", "kafka"]}
cian-entities = "^1.7"
cian-enum = "^1.1"
cian-http = "^0.22"
cian-kafka = "^1.1"
cian-pg = "^0.2"
cian-rabbitmq = "^3.1"
cian-schemas = "^2.10"
cian-web = "^2.1"
click = "^7.1"
more-itertools = "^8.3"
python-dateutil = "^2.8"
pytils = "^0.3"
sentry-sdk = "^0.19"
simple-settings = "^0.19"
sqlalchemy = "^1.3"
tornado = "^6.0"

[tool.poetry.dev-dependencies]
automation-helpers = "*"
cian-automation = "^2.0"
cian-functional-test-utils = {version = "*", extras = ["python", "postgres", "graphite", "rabbitmq", "cache", "cassandra", "kafka"]}
cian-lint = "*"
cian-test-utils = "^1.2"
diff-cover = "*"
freezegun = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-mock = "*"
pytest-tornado = "*"
tox = "*"
tox-poetry = "*"
astroid = "==2.4.2"
